projects/compiler/test/typechecker/match/error_exhaustive_Bool_literal.out
Error at %TEST_DIR%/typechecker/match/error_exhaustive_Bool_literal.abra:5:3
Unreachable match case
  |    else => 3
       ^
The previous case(s) cover all possibilities for match target type 'Bool'
